--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-<meta http-equiv="refresh" content="0; https://andreiipaul.github.io/listas/listas/WebContent/index.html">
+<!DOCTYPE html>
+<head>
+  <meta http-equiv="refresh" content="0; https://andreiipaul.github.io/listas/listas/WebContent/index.html">
+</head>
+
+
